--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "JavaScript 정리 공간"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "TJLee"
 description              : "An amazing website."
 url                      : "https://TJLee93.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : ''# the subpath of your site, e.g. "/blog"
@@ -107,10 +107,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  name             : "TJLee"
+  avatar           : "![쿵푸기린](https://user-images.githubusercontent.com/70124288/104565113-240bd780-568f-11eb-9c53-538c7bbce69e.jpg)
+" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "이 블로그는 JavaScript를 공부하면서 제대로 이해했는지 체크하는 '진실의 방'입니다."
+  location         : "South Korea"
   email            :
   links:
     - label: "Email"
