--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "JavaScript 정리 공간"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "TJLee"
+name                     : ""
 description              : "An amazing website."
 url                      : "https://TJLee93.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : ''# the subpath of your site, e.g. "/blog"
